Fix scroll when menu is open on Safari iOS

--- a/src/WebHeader/WebHeader.styl
+++ b/src/WebHeader/WebHeader.styl
@@ -96,4 +96,7 @@
         margin-left 18px
 
 .overflow
-  overflow hidden
+  height 100%
+  overflow hidden !important
+  position fixed
+  width 100%
